<resources>
    <string name="appName">SET</string>
    <string name="setCardGameText">SET Card Game</string>
    <string name="exitBtn">Exit</string>
    <string name="scoreboardText">Scoreboard</string>
    <string name="singleplayerText">Singleplayer</string>
    <string name="multiplayerText">Multiplayer</string>
    <string name="timerTextView">0:00</string>
    <string name="pointTextView">0</string>
    <string name="scoreTextView">SCORE</string>
    <string name="scoreText">Score</string>
    <string name="myScoreText">My Scores</string>
    <string name="ownText">Own</string>
    <string name="contentDescriptionForCards">card</string>
    <string name="newGameBtn">New Game</string>
    <string name="backToMenuBtn">Menu</string>
    <string name="howToText">A SET consists of three cards in which each property is examined separately, must match or differ. This rule must match the three cards selected for ALL properties. In other words, the shape is either identical on all three cards or different on each; the color is either the same on all three cards or different on each; finally, the number of pieces must either match all of them or be different.</string>
    <string name="howToTitle">How To Play</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="difficultyTextView">NORMAL</string>
    <string name="randomGameBtn">Random Game</string>
    <string name="privateGameText">Private Game</string>
    <string name="createPrivateGameText">Create Private Game</string>
    <string name="chooseMultiTypeText">Choose Multiplayer Type</string>
    <string name="multiTypeText">Multiplayer Type</string>
    <string name="connectionTextTV">CONNECTION CODE</string>
    <string name="waitingTV">SEARCHING FOR GAME</string>
    <string name="waitingText">Searching For Game</string>
    <string name="stopWaitingBtn">STOP SEARCHING</string>
    <string name="deletePrivateGameBtn">DELETE GAME</string>
    <string name="joinGameBtn">Join Game</string>
    <string name="createGameBtn">Create Game</string>
    <string name="joinWithCodeBtn">Join</string>
    <string name="joinGameText">Join Game</string>
    <string name="enterConnectionCodeText">ENTER CONNECTION CODE</string>
    <string name="worldScoresText">World Scores</string>
    <string name="backBtn">Back</string>
    <string name="won">WON</string>
    <string name="lost">LOST</string>
    <string name="draw">DRAW</string>
    <string name="meText">Me:</string>
    <string name="opponentText">Opponent:</string>
    <string name="difficulty">Difficulty</string>
    <string name="timeText">Time</string>
    <string name="pointsText">Points</string>
</resources>