<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.multiplayer.MultiplayerEndScreenActivity">

    <Button
        android:id="@+id/newGameBtn2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_blue"
        android:gravity="center"
        android:onClick="switchToRandomGame"
        android:text="@string/newGameBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732" />

    <Button
        android:id="@+id/backToMenuBtn2"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_blue"
        android:onClick="backToMenu"
        android:text="@string/backToMenuBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <TextView
        android:id="@+id/scoreForMultiTextView"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/scoreTextView"
        android:textColor="@color/green"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/multiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" – "
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/newGameBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreForMultiTextView"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/ownScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/newGameBtn2"
        app:layout_constraintEnd_toStartOf="@+id/multiTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreForMultiTextView"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/opponentScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/newGameBtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/multiTextView"
        app:layout_constraintTop_toBottomOf="@+id/scoreForMultiTextView"
        app:layout_constraintVertical_bias="0.325" />
</androidx.constraintlayout.widget.ConstraintLayout>