<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.multiplayer.MultiplayerActivity">

    <TextView
        android:id="@+id/opponentPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pointTextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ownPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/pointTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/MeTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/callSETBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/dark_blue"
        android:onClick="onSETBtnClick"
        android:text="@string/callSETBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponentPointTextView"
        app:layout_constraintVertical_bias="0.025" />

    <TableLayout
        android:id="@+id/gameTableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callSETBtn"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card0"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/card1"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card2"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card3"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card4"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card5"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card6"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card7"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card8"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@drawable/card_background_empty"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/MeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/meText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opponentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/opponentText"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/opponentPointTextView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>