<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ViewModel.SingleplayerActivity"
    android:background="@drawable/set_background">

    <View
        android:id="@+id/view"
        android:layout_width="89dp"
        android:layout_height="59dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="54dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/opponentPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/blue"
        android:text="@string/pointTextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/blue"
        android:text="@string/timerTextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/gameTableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opponentPointTextView">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card0"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/card1"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card2"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card3"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card4"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card5"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card6"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card7"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card8"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/card9"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card10"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/card11"
                android:layout_width="100dp"
                android:layout_height="144dp"
                android:background="@color/trans"
                android:contentDescription="@string/contentDescriptionForCards"
                android:onClick="onCardClick"
                app:srcCompat="@drawable/gd1"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>